--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Simple Game – Collectibles, Inventory & Bike Speed Boost</title>
+  <title>Simple Game – Cars Kill Player with Sounds</title>
   <style>
     body {
       text-align: center;
@@ -76,7 +76,7 @@
   <div id="dialogBox"></div>
 
   <script>
-    // Set up canvas and context variables
+    // --- Setup canvas and contexts ---
     const canvas = document.getElementById("gameCanvas");
     const ctx = canvas.getContext("2d");
     const minimap = document.getElementById("minimap");
@@ -88,8 +88,12 @@
     canvas.width = window.innerWidth;
     canvas.height = window.innerHeight;
 
-    // Define the base speed and set player speed to baseSpeed.
-    const baseSpeed = 0.75; // Reduced by 50% from previous 1.5
+    // --- Preload Sounds ---
+    const deathSound = new Audio("death.mp3");
+    const coinSound = new Audio("coin.mp3");
+
+    // --- Player & Global Variables ---
+    const baseSpeed = 0.75; // Player's base speed
     let player = {
       x: canvas.width / 2,
       y: canvas.height / 2,
@@ -99,44 +103,41 @@
       dy: 0
     };
 
-    // Global money and inventory variables
     let money = 0;
     let inventory = [];
-
-    // Variable to track if a bike boost is active
     let bikeSpeedActive = false;
+    let gameOver = false;  // Flag to indicate player death
 
-    // Array for collectible coins (each coin is worth $50)
-    let coins = [];
+    // Arrays for coins and cars
+    let coins = [];   // Each coin is worth $50
+    let cars = [];    // Cars spawn on roads
 
-    // Constants for building walls and doors
+    // --- Constants for Buildings ---
     const wallThickness = 5;
     const doorWidth = 40;
     const doorHeight = 15;
 
-    // Buildings and streets (same as before)
+    // --- Buildings & Streets ---
     let buildings = [
       { x: 200, y: 150, width: 100, height: 100 },
       { x: 500, y: 300, width: 150, height: 150 },
       { x: 700, y: 30,  width: 120, height: 200 },
       { x: 450, y: 500, width: 200, height: 120 }
     ];
-
     let streets = [
       { x: 0, y: 250, width: canvas.width, height: 50 },
       { x: 400, y: 0, width: 50, height: canvas.height }
     ];
 
-    // NPCs array – first NPC is a vehicle seller
+    // --- NPCs ---
     let npcs = [
       { x: 600, y: 400, size: 20, message: "Vehicle Seller", type: "vehicleSeller", carPrice: 1000, bikePrice: 100 },
       { x: 250, y: 350, size: 20, message: "Stay on the sidewalks!" }
     ];
-
     let activeVendor = null;
-    const interactionThreshold = 100; // Maximum distance for interaction
+    const interactionThreshold = 100;
 
-    // Helper function: returns true if two rectangles intersect.
+    // --- Helper Functions ---
     function rectsIntersect(r1, r2) {
       return !(
         r2.x > r1.x + r1.width ||
@@ -146,24 +147,8 @@
       );
     }
 
-    // Compute wall segments for a building (with a gap for the door)
-    function getWalls(building) {
-      const walls = [];
-      // Top wall (full width)
-      walls.push({ x: building.x, y: building.y, width: building.width, height: wallThickness });
-      // Left wall (full height)
-      walls.push({ x: building.x, y: building.y, width: wallThickness, height: building.height });
-      // Right wall (full height)
-      walls.push({ x: building.x + building.width - wallThickness, y: building.y, width: wallThickness, height: building.height });
-      // Bottom wall is split into two segments (gap for door)
-      const doorX = building.x + building.width / 2 - doorWidth / 2;
-      walls.push({ x: building.x, y: building.y + building.height - wallThickness, width: doorX - building.x, height: wallThickness });
-      walls.push({ x: doorX + doorWidth, y: building.y + building.height - wallThickness, width: (building.x + building.width) - (doorX + doorWidth), height: wallThickness });
-      return walls;
-    }
-
-    // Check collision against building walls
-    function checkCollision(x, y) {
+    // Check collision against building walls only
+    function checkWallCollision(x, y) {
       const pRect = { x: x, y: y, width: player.size, height: player.size };
       for (const building of buildings) {
         const walls = getWalls(building);
@@ -174,13 +159,64 @@
       return false;
     }
 
-    // Draw the player
+    // Check collision against cars (if any car collides with the player, return true)
+    function checkCarCollision() {
+      const pRect = { x: player.x, y: player.y, width: player.size, height: player.size };
+      for (const car of cars) {
+        const carRect = { x: car.x, y: car.y, width: car.width, height: car.height };
+        if (rectsIntersect(pRect, carRect)) return true;
+      }
+      return false;
+    }
+
+    // Compute wall segments for a building (with a gap for the door)
+    function getWalls(building) {
+      const walls = [];
+      // Top wall
+      walls.push({ x: building.x, y: building.y, width: building.width, height: wallThickness });
+      // Left wall
+      walls.push({ x: building.x, y: building.y, width: wallThickness, height: building.height });
+      // Right wall
+      walls.push({ x: building.x + building.width - wallThickness, y: building.y, width: wallThickness, height: building.height });
+      // Bottom wall split (door gap in center)
+      const doorX = building.x + building.width / 2 - doorWidth / 2;
+      walls.push({ x: building.x, y: building.y + building.height - wallThickness, width: doorX - building.x, height: wallThickness });
+      walls.push({ x: doorX + doorWidth, y: building.y + building.height - wallThickness, width: (building.x + building.width) - (doorX + doorWidth), height: wallThickness });
+      return walls;
+    }
+
+    // --- Drawing Functions ---
+    function drawSpeedLines() {
+      if (!bikeSpeedActive) return;
+      let angle = Math.atan2(player.dy, player.dx);
+      if (player.dx === 0 && player.dy === 0) angle = 0;
+      let behindAngle = angle + Math.PI;
+      let centerX = player.x + player.size / 2;
+      let centerY = player.y + player.size / 2;
+      let perpX = -Math.sin(angle);
+      let perpY = Math.cos(angle);
+      const lineLength = 30;
+      ctx.strokeStyle = "rgba(255,255,255,0.7)";
+      ctx.lineWidth = 2;
+      for (let i = -1; i <= 1; i++) {
+        let offset = i * 5;
+        let startX = centerX + perpX * offset;
+        let startY = centerY + perpY * offset;
+        let endX = startX + Math.cos(behindAngle) * lineLength;
+        let endY = startY + Math.sin(behindAngle) * lineLength;
+        ctx.beginPath();
+        ctx.moveTo(startX, startY);
+        ctx.lineTo(endX, endY);
+        ctx.stroke();
+      }
+    }
+
     function drawPlayer() {
+      drawSpeedLines();
       ctx.fillStyle = "red";
       ctx.fillRect(player.x, player.y, player.size, player.size);
     }
 
-    // Draw buildings: interior, walls, and door (visual)
     function drawBuildings() {
       buildings.forEach(building => {
         ctx.fillStyle = "lightgray";
@@ -197,7 +233,6 @@
       });
     }
 
-    // Draw streets with dashed yellow lines
     function drawStreets() {
       streets.forEach(street => {
         ctx.fillStyle = "#555";
@@ -218,7 +253,6 @@
       });
     }
 
-    // Draw NPCs
     function drawNPCs() {
       ctx.fillStyle = "blue";
       npcs.forEach(npc => {
@@ -226,7 +260,6 @@
       });
     }
 
-    // Draw coins (collectible money) on the main canvas
     function drawCoins() {
       ctx.fillStyle = "gold";
       coins.forEach(coin => {
@@ -236,12 +269,57 @@
       });
     }
 
-    // Update the money tracker display
+    function drawCars() {
+      ctx.fillStyle = "black";
+      cars.forEach(car => {
+        ctx.fillRect(car.x, car.y, car.width, car.height);
+      });
+    }
+
+    function drawMinimap() {
+      minimapCtx.clearRect(0, 0, minimap.width, minimap.height);
+      const scaleX = minimap.width / canvas.width;
+      const scaleY = minimap.height / canvas.height;
+      buildings.forEach(b => {
+        minimapCtx.fillStyle = "lightgray";
+        minimapCtx.fillRect(b.x * scaleX, b.y * scaleY, b.width * scaleX, b.height * scaleY);
+        const walls = getWalls(b);
+        minimapCtx.fillStyle = "gray";
+        walls.forEach(wall => {
+          minimapCtx.fillRect(wall.x * scaleX, wall.y * scaleY, wall.width * scaleX, wall.height * scaleY);
+        });
+        const doorX = b.x + b.width / 2 - doorWidth / 2;
+        const doorY = b.y + b.height - wallThickness;
+        minimapCtx.fillStyle = "brown";
+        minimapCtx.fillRect(doorX * scaleX, doorY * scaleY, doorWidth * scaleX, doorHeight * scaleY);
+      });
+      minimapCtx.fillStyle = "#555";
+      streets.forEach(s => {
+        minimapCtx.fillRect(s.x * scaleX, s.y * scaleY, s.width * scaleX, s.height * scaleY);
+      });
+      minimapCtx.fillStyle = "blue";
+      npcs.forEach(npc => {
+        minimapCtx.fillRect(npc.x * scaleX, npc.y * scaleY, npc.size * scaleX, npc.size * scaleY);
+      });
+      minimapCtx.fillStyle = "gold";
+      coins.forEach(coin => {
+        minimapCtx.beginPath();
+        minimapCtx.arc((coin.x + coin.size / 2) * scaleX, (coin.y + coin.size / 2) * scaleY, coin.size * scaleX, 0, 2 * Math.PI);
+        minimapCtx.fill();
+      });
+      minimapCtx.fillStyle = "black";
+      cars.forEach(car => {
+        minimapCtx.fillRect(car.x * scaleX, car.y * scaleY, car.width * scaleX, car.height * scaleY);
+      });
+      minimapCtx.fillStyle = "red";
+      minimapCtx.fillRect(player.x * scaleX, player.y * scaleY, player.size * scaleX, player.size * scaleY);
+    }
+
+    // --- Inventory & UI Functions ---
     function updateMoneyDisplay() {
       moneyTracker.innerText = "$" + money;
     }
 
-    // Update the inventory display. Bike items will be rendered as clickable spans.
     function updateInventoryDisplay() {
       let html = "Inventory:<br>";
       if (inventory.length === 0) {
@@ -258,20 +336,17 @@
       inventoryDiv.innerHTML = html;
     }
 
-    // Function to activate bike speed boost when a bike item is clicked.
-    // The boost lasts 10 seconds and gives a 25% speed increase.
+    // --- Bike Boost Activation ---
     function activateBikeBoost(index) {
       if (bikeSpeedActive) {
         showDialog("Bike boost is already active!");
         return;
       }
-      // Remove the bike from inventory (consuming the item)
       inventory.splice(index, 1);
       updateInventoryDisplay();
       bikeSpeedActive = true;
       player.speed = baseSpeed * 1.25;
       showDialog("Bike activated: Speed boost for 10 seconds!");
-      // After 10 seconds, revert speed
       setTimeout(() => {
         player.speed = baseSpeed;
         bikeSpeedActive = false;
@@ -279,7 +354,7 @@
       }, 10000);
     }
 
-    // Check NPC interaction when clicking on an NPC
+    // --- NPC Interaction ---
     function checkNPCInteraction(x, y) {
       npcs.forEach(npc => {
         if (
@@ -309,7 +384,7 @@
       });
     }
 
-    // Spawn a coin at a random location (only if fewer than 5 coins exist)
+    // --- Coin Spawning ---
     function spawnCoin() {
       if (coins.length >= 5) return;
       const coinSize = 10;
@@ -318,11 +393,91 @@
       const y = Math.random() * (canvas.height - coinSize);
       coins.push({ x: x, y: y, size: coinSize, value: coinValue });
     }
-
-    // Spawn a new coin every 5 seconds
     setInterval(spawnCoin, 5000);
 
-    // Listen for canvas clicks (for door and NPC interactions)
+    // --- Car Spawning and Updating ---
+    function spawnCar() {
+      let roadChoice = Math.random() < 0.5 ? 0 : 1; // 0: horizontal, 1: vertical
+      let car = {};
+      const carWidth = 40;
+      const carHeight = 20;
+      if (roadChoice === 0) {
+        let road = { x: 0, y: 250, width: canvas.width, height: 50 };
+        if (Math.random() < 0.5) {
+          car.x = -carWidth;
+          car.y = road.y + Math.random() * (road.height - carHeight);
+          car.dx = 2;
+          car.dy = 0;
+        } else {
+          car.x = canvas.width;
+          car.y = road.y + Math.random() * (road.height - carHeight);
+          car.dx = -2;
+          car.dy = 0;
+        }
+        car.width = carWidth;
+        car.height = carHeight;
+      } else {
+        let road = { x: 400, y: 0, width: 50, height: canvas.height };
+        if (Math.random() < 0.5) {
+          car.y = -carHeight;
+          car.x = road.x + Math.random() * (road.width - carWidth);
+          car.dx = 0;
+          car.dy = 2;
+        } else {
+          car.y = canvas.height;
+          car.x = road.x + Math.random() * (road.width - carWidth);
+          car.dx = 0;
+          car.dy = -2;
+        }
+        car.width = carWidth;
+        car.height = carHeight;
+      }
+      cars.push(car);
+    }
+    function scheduleNextCar() {
+      let delay = Math.random() * 5000 + 3000; // Between 3 and 8 seconds
+      setTimeout(() => {
+        spawnCar();
+        scheduleNextCar();
+      }, delay);
+    }
+    scheduleNextCar();
+    function updateCars() {
+      for (let i = cars.length - 1; i >= 0; i--) {
+        let car = cars[i];
+        car.x += car.dx;
+        car.y += car.dy;
+        if (
+          car.x > canvas.width ||
+          car.x + car.width < 0 ||
+          car.y > canvas.height ||
+          car.y + car.height < 0
+        ) {
+          cars.splice(i, 1);
+        }
+      }
+    }
+
+    // --- Player Death and Restart ---
+    function killPlayer() {
+      deathSound.play();
+      gameOver = true;
+      showDialog("You died! Press R to restart.");
+    }
+    function restartGame() {
+      gameOver = false;
+      player.x = canvas.width / 2;
+      player.y = canvas.height / 2;
+      money = 0;
+      inventory = [];
+      coins = [];
+      cars = [];
+      updateMoneyDisplay();
+      updateInventoryDisplay();
+      requestAnimationFrame(update);
+    }
+
+    // --- Canvas Click Handler ---
     canvas.addEventListener("click", (event) => {
       const rect = canvas.getBoundingClientRect();
       const clickX = event.clientX - rect.left;
@@ -357,7 +512,7 @@
       }
     });
 
-    // Listen for movement keys and for Tab to toggle inventory
+    // --- Key Listeners ---
     document.addEventListener("keydown", (e) => {
       if (e.key === "ArrowRight" || e.key === "d") player.dx = player.speed;
       else if (e.key === "ArrowLeft" || e.key === "a") player.dx = -player.speed;
@@ -365,22 +520,22 @@
       else if (e.key === "ArrowDown" || e.key === "s") player.dy = player.speed;
       else if (e.key === "Tab") {
         e.preventDefault();
-        // Toggle inventory display
         if (inventoryDiv.style.display === "none") {
           inventoryDiv.style.display = "block";
           updateInventoryDisplay();
         } else {
           inventoryDiv.style.display = "none";
         }
+      } else if (e.key === "r" || e.key === "R") {
+        if (gameOver) {
+          restartGame();
+        }
       }
     });
-
     document.addEventListener("keyup", (e) => {
       if (["ArrowRight", "d", "ArrowLeft", "a"].includes(e.key)) player.dx = 0;
       if (["ArrowUp", "w", "ArrowDown", "s"].includes(e.key)) player.dy = 0;
     });
-
-    // Listen for keys "1" and "2" to complete a purchase when a vendor is active.
     document.addEventListener("keydown", (e) => {
       if (activeVendor) {
         if (e.key === "1") {
@@ -409,80 +564,49 @@
       }
     });
 
-    // Draw the minimap (including buildings, NPCs, coins, and the player)
-    function drawMinimap() {
-      minimapCtx.clearRect(0, 0, minimap.width, minimap.height);
-      const scaleX = minimap.width / canvas.width;
-      const scaleY = minimap.height / canvas.height;
-      buildings.forEach(b => {
-        minimapCtx.fillStyle = "lightgray";
-        minimapCtx.fillRect(b.x * scaleX, b.y * scaleY, b.width * scaleX, b.height * scaleY);
-        const walls = getWalls(b);
-        minimapCtx.fillStyle = "gray";
-        walls.forEach(wall => {
-          minimapCtx.fillRect(wall.x * scaleX, wall.y * scaleY, wall.width * scaleX, wall.height * scaleY);
-        });
-        const doorX = b.x + b.width / 2 - doorWidth / 2;
-        const doorY = b.y + b.height - wallThickness;
-        minimapCtx.fillStyle = "brown";
-        minimapCtx.fillRect(doorX * scaleX, doorY * scaleY, doorWidth * scaleX, doorHeight * scaleY);
-      });
-      minimapCtx.fillStyle = "#555";
-      streets.forEach(s => {
-        minimapCtx.fillRect(s.x * scaleX, s.y * scaleY, s.width * scaleX, s.height * scaleY);
-      });
-      minimapCtx.fillStyle = "blue";
-      npcs.forEach(npc => {
-        minimapCtx.fillRect(npc.x * scaleX, npc.y * scaleY, npc.size * scaleX, npc.size * scaleY);
-      });
-      // Draw coins on the minimap
-      minimapCtx.fillStyle = "gold";
-      coins.forEach(coin => {
-        minimapCtx.beginPath();
-        minimapCtx.arc((coin.x + coin.size / 2) * scaleX, (coin.y + coin.size / 2) * scaleY, coin.size * scaleX, 0, 2 * Math.PI);
-        minimapCtx.fill();
-      });
-      minimapCtx.fillStyle = "red";
-      minimapCtx.fillRect(player.x * scaleX, player.y * scaleY, player.size * scaleX, player.size * scaleY);
-    }
-
-    // Main update loop
+    // --- Main Update Loop ---
     function update() {
+      if (gameOver) return;
       let newX = player.x + player.dx;
       let newY = player.y + player.dy;
-      // Boundary check
       if (newX < 0) newX = 0;
       if (newY < 0) newY = 0;
       if (newX + player.size > canvas.width) newX = canvas.width - player.size;
       if (newY + player.size > canvas.height) newY = canvas.height - player.size;
-      // Check collision with building walls
-      if (!checkCollision(newX, newY)) {
+      if (!checkWallCollision(newX, newY)) {
         player.x = newX;
         player.y = newY;
       }
-      // Check coin collection
+      // Coin collection
       for (let i = coins.length - 1; i >= 0; i--) {
         let coin = coins[i];
         if (rectsIntersect(
             { x: player.x, y: player.y, width: player.size, height: player.size },
             { x: coin.x, y: coin.y, width: coin.size, height: coin.size }
           )) {
+          coinSound.play();
           money += coin.value;
           updateMoneyDisplay();
           coins.splice(i, 1);
         }
+      }
+      updateCars();
+      if (checkCarCollision()) {
+        killPlayer();
+        return;
       }
       ctx.clearRect(0, 0, canvas.width, canvas.height);
       drawStreets();
       drawBuildings();
       drawNPCs();
       drawCoins();
+      drawCars();
       drawPlayer();
       drawMinimap();
       requestAnimationFrame(update);
     }
 
-    // Show dialog messages for 6 seconds
+    // --- Show Dialog ---
     function showDialog(message) {
       dialogBox.innerText = message;
       dialogBox.style.display = "block";
@@ -491,6 +615,26 @@
       }, 6000);
     }
 
+    // --- Player Death and Restart ---
+    function killPlayer() {
+      deathSound.play();
+      gameOver = true;
+      showDialog("You died! Press R to restart.");
+    }
+    function restartGame() {
+      gameOver = false;
+      player.x = canvas.width / 2;
+      player.y = canvas.height / 2;
+      money = 0;
+      inventory = [];
+      coins = [];
+      cars = [];
+      updateMoneyDisplay();
+      updateInventoryDisplay();
+      requestAnimationFrame(update);
+    }
+
+    // --- Start the Game ---
     updateMoneyDisplay();
     update();
   </script>
